# BazBOM

./: .bandit  .bazelignore  .bazelrc  .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .semgrepignore  .vale.ini  AGENTS.md  BAZEL_MONOREPO_CAPABILITIES.md  BUILD.bazel  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPREHENSIVE_FEATURE_ANALYSIS.md  COMPREHENSIVE_VERIFICATION.md  CONTRIBUTING.md  Cargo.toml  DAY1_COMPLETE.md  DAY3_COMPLETE.md  DEBUG_LOGGING_QUICK_START.md  DEEP_ANALYSIS_COMPLETE_NOV_5_2025.md  DEEP_ANALYSIS_COMPLETE_NOV_5_2025_FINAL.md  DEEP_ANALYSIS_FINDINGS_NOV_5_2025.md  DEEP_ANALYSIS_REPORT.md  DEEP_ANALYSIS_REPORT_NOV_2025.md  Dockerfile  Dockerfile.debian  ENHANCEMENT_SUMMARY.md  EXPLORATION_COMPLETE.md  EXPLORATION_INDEX.md  EXPLORATION_SUMMARY.md  FEATURES.md  FEATURE_SUMMARY.md  FIXES_SUMMARY.md  FLOW_DIAGRAMS.md  (+66 more)
benchmarks/: BUILD.bazel  PRODUCTION_BENCHMARK_RESULTS.md  README.md  benchmark-summary.json  runner.py  test_runner.py
crates/bazbom-advisories/: Cargo.toml
crates/bazbom-advisories/src/: lib.rs  merge.rs  osv.rs  version_match.rs
crates/bazbom-advisories/src/enrichment/: epss.rs  kev.rs  mod.rs
crates/bazbom-advisories/src/parsers/: ghsa.rs  mod.rs  nvd.rs  osv.rs
crates/bazbom-advisories/tests/: integration_test.rs
crates/bazbom-alpine/: Cargo.toml
crates/bazbom-alpine/src/: lib.rs
crates/bazbom-auth/: Cargo.toml
crates/bazbom-auth/src/: api_key.rs  audit.rs  jwt.rs  lib.rs  rbac.rs  secrets.rs
crates/bazbom-bazel-reachability/: Cargo.toml
crates/bazbom-bazel-reachability/src/: error.rs  lib.rs
crates/bazbom-cache/: Cargo.toml
crates/bazbom-cache/src/: incremental.rs  lib.rs  remote.rs
crates/bazbom-containers/: Cargo.toml
crates/bazbom-containers/src/: lib.rs  oci_parser.rs
crates/bazbom-containers/src/os_packages/: detection.rs  mod.rs  parsers.rs  scanner.rs
crates/bazbom-containers/src/tools/: dive.rs  dockle.rs  findings.rs  grype.rs  mod.rs  orchestrator.rs  syft.rs  trivy.rs  trufflehog.rs
crates/bazbom-core/: Cargo.toml
crates/bazbom-core/benches/: scan_performance.rs
crates/bazbom-core/src/: lib.rs
crates/bazbom-core/tests/: detect.rs
crates/bazbom-crypto/: Cargo.toml
crates/bazbom-crypto/src/: encryption.rs  hashing.rs  lib.rs  random.rs
crates/bazbom-dashboard/: Cargo.toml
crates/bazbom-dashboard/src/: export.rs  lib.rs  middleware.rs  models.rs  routes.rs
crates/bazbom-dashboard/static/: index.html
crates/bazbom-dashboard/static/css/: dashboard.css
crates/bazbom-dashboard/static/js/: dashboard.js
crates/bazbom-debian/: Cargo.toml
crates/bazbom-debian/src/: lib.rs
crates/bazbom-depsdev/: Cargo.toml  README.md
crates/bazbom-depsdev/src/: client.rs  error.rs  lib.rs  models.rs
crates/bazbom-formats/: Cargo.toml
crates/bazbom-formats/src/: cyclonedx.rs  lib.rs  sarif.rs  spdx.rs
crates/bazbom-formats/src/licenses/: compatibility.rs  detection.rs  mod.rs  obligations.rs
crates/bazbom-formats/tests/: cyclonedx_schema.rs  golden_schema.rs  output_format.rs  sarif_schema.rs  schema_validation.rs  spdx_schema.rs
crates/bazbom-formats/tests/golden/: cyclonedx_minimal.json  sarif_minimal.json  spdx_minimal.json
crates/bazbom-github/: Cargo.toml
crates/bazbom-github/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  orchestrator.rs  pr_template.rs  webhook.rs
crates/bazbom-github/templates/: pr_template.md
crates/bazbom-go-reachability/: Cargo.toml
crates/bazbom-go-reachability/src/: analyzer.rs  ast_parser.rs  call_graph.rs  entrypoints.rs  error.rs  lib.rs  models.rs
crates/bazbom-hex/: Cargo.toml
crates/bazbom-hex/src/: lib.rs
crates/bazbom-js-reachability/: Cargo.toml  README.md
crates/bazbom-js-reachability/src/: analyzer.rs  ast_parser.rs  call_graph.rs  entrypoints.rs  error.rs  lib.rs  module_resolver.rs
crates/bazbom-lsp/: Cargo.toml  README.md
crates/bazbom-lsp/src/: main.rs
crates/bazbom-ml/: Cargo.toml  README.md
crates/bazbom-ml/src/: anomaly.rs  features.rs  fix_generator.rs  lib.rs  llm.rs  prioritization.rs  risk.rs
crates/bazbom-operator/: Cargo.toml  README.md
crates/bazbom-operator/k8s/: crd.yaml  deployment.yaml  example-scan.yaml  rbac-namespaced.yaml
crates/bazbom-operator/src/: crd.rs  error.rs  lib.rs  reconciler.rs
crates/bazbom-orchestrator/: Cargo.toml
crates/bazbom-orchestrator/src/: lib.rs
crates/bazbom-packagist/: Cargo.toml
crates/bazbom-packagist/src/: lib.rs
crates/bazbom-php-reachability/: Cargo.toml  README.md
crates/bazbom-php-reachability/src/: analyzer.rs  ast_parser.rs  call_graph.rs  entrypoints.rs  lib.rs  models.rs
crates/bazbom-policy/: Cargo.toml
crates/bazbom-policy/src/: audit.rs  inheritance.rs  lib.rs  rego.rs  templates.rs
crates/bazbom-polyglot/: Cargo.toml
crates/bazbom-polyglot/src/: checksum_fetcher.rs  detection.rs  ecosystems.rs  lib.rs  reachability_integration.rs  sbom.rs  vulnerabilities.rs
crates/bazbom-polyglot/src/cicd/: mod.rs
crates/bazbom-polyglot/src/parsers/: go.rs  gradle.rs  maven.rs  mod.rs  npm.rs  php.rs  python.rs  ruby.rs  rust.rs
crates/bazbom-reachability/: Cargo.toml
crates/bazbom-reachability/src/: lib.rs
crates/bazbom-reachability/src/bazel/: mod.rs  models.rs
crates/bazbom-reachability/src/go/: analyzer.rs  ast_parser.rs  call_graph.rs  entrypoints.rs  error.rs
crates/bazbom-reachability/src/java/: analyzer.rs  bytecode_analyzer.rs  call_graph.rs  entrypoints.rs  error.rs  mod.rs
crates/bazbom-reachability/src/js/: analyzer.rs  ast_parser.rs  call_graph.rs  entrypoints.rs  mod.rs  models.rs  module_resolver.rs
crates/bazbom-reachability/src/php/: analyzer.rs  ast_parser.rs  call_graph.rs  entrypoints.rs  error.rs  mod.rs
crates/bazbom-reachability/src/python/: analyzer.rs  ast_parser.rs  call_graph.rs  entrypoints.rs  error.rs  mod.rs  module_resolver.rs
crates/bazbom-reachability/src/ruby/: analyzer.rs  ast_parser.rs  call_graph.rs  entrypoints.rs  mod.rs  models.rs
docs/: BAZEL.md  (+84 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: sbom_parser.rs
(+955 files in other folders)
