# Root build file for BazBOM
#
# NOTE: This project has migrated from Python to Rust.
# Most Bazel targets have been deprecated in favor of the Rust CLI.
#
# To use BazBOM:
#   1. Build the Rust CLI: cargo build --release -p bazbom
#   2. Run: ./target/release/bazbom scan .
#
# Or install via Homebrew:
#   brew tap cboyd0319/bazbom
#   brew install bazbom
#
# For Bazel projects, the JVM dependency aspects still work.
# See examples/test_aspect/ for usage.

package(default_visibility = ["//visibility:public"])

# Export the Bazel workspace files for reference
exports_files([
    "WORKSPACE",
    "maven_install.json",
])

# Filegroup to collect Bazel aspect definitions
filegroup(
    name = "aspects",
    srcs = [
        "//tools/supplychain:aspects.bzl",
        "//tools/supplychain:defs.bzl",
    ],
)

# Filegroup for documentation
filegroup(
    name = "docs",
    srcs = glob(["docs/**/*.md"]),
)

# Filegroup for examples
filegroup(
    name = "examples",
    srcs = glob(["examples/**/*"]),
)
