[workspace]
members = [
  "crates/bazbom",
  "crates/bazbom-core",
  "crates/bazbom-formats",
  "crates/bazbom-advisories",
  "crates/bazbom-policy",
  "crates/bazbom-graph",
  "crates/bazbom-lsp",
  "crates/bazbom-tui",
  "crates/bazbom-dashboard",
  "crates/bazbom-reports",
  "crates/bazbom-threats",
  "crates/bazbom-cache",
  "crates/bazbom-containers",
  "crates/bazbom-ml",
  "crates/bazbom-operator",
  "crates/bazbom-depsdev",
  "crates/bazbom-upgrade-analyzer",
  "crates/bazbom-polyglot",
  "crates/bazbom-js-reachability",
  "crates/bazbom-python-reachability",
  "crates/bazbom-go-reachability",
  "crates/bazbom-rust-reachability",
  "crates/bazbom-ruby-reachability",
  "crates/bazbom-php-reachability",
  "crates/bazbom-java-reachability",
  "crates/bazbom-bazel-reachability",
  "crates/bazbom-auth",
  "crates/bazbom-crypto",
  "crates/bazbom-verify",
  "crates/bazbom-tool-verify",
  # v6.8 - Jira + GitHub Integration
  "crates/bazbom-jira",
  "crates/bazbom-github",
]
resolver = "2"

