[workspace]
members = [
  "crates/bazbom",
  "crates/bazbom-core",
  "crates/bazbom-formats",
  "crates/bazbom-vulnerabilities",
  "crates/bazbom-policy",
  "crates/bazbom-graph",
  "crates/bazbom-lsp",
  "crates/bazbom-tui",
  "crates/bazbom-dashboard",
  "crates/bazbom-reports",
  "crates/bazbom-threats",
  "crates/bazbom-cache",
  "crates/bazbom-containers",
  "crates/bazbom-ml",
  "crates/bazbom-operator",
  "crates/bazbom-depsdev",
  "crates/bazbom-upgrade-analyzer",
  "crates/bazbom-scanner",
  "crates/bazbom-orchestrator",
  "crates/bazbom-reachability",
  "crates/bazbom-auth",
  "crates/bazbom-crypto",
  "crates/bazbom-verify",
  "crates/bazbom-tool-verify",
  # v6.8 - Jira + GitHub Integration
  "crates/bazbom-jira",
  "crates/bazbom-github",
  # v6.9 - Packagist Integration
  "crates/bazbom-packagist",
  # v6.10 - Ecosystem Expansion
  "crates/bazbom-alpine",
  "crates/bazbom-debian",
  "crates/bazbom-redhat",
  "crates/bazbom-hex",
  "crates/bazbom-pub",
]
resolver = "2"

