[package]
name = "bazbom-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bazbom-formats = { path = "../crates/bazbom-formats" }
bazbom-core = { path = "../crates/bazbom-core" }
serde_json = "1.0"

[[bin]]
name = "sbom_parser"
path = "fuzz_targets/sbom_parser.rs"
test = false
doc = false
