[package]
name = "bazbom-advisories"
version = "0.0.1-dev"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
blake3 = "1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3"
