[package]
name = "bazbom-advisories"
version = "0.5.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
blake3 = "1"
time = { version = "0.3", features = ["formatting"] }
semver = "1"

[dev-dependencies]
tempfile = "3"
