[package]
name = "bazbom-auth"
version = "7.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"
description = "Authentication and authorization for BazBOM - JWT, RBAC, API keys"

[dependencies]
# JWT authentication
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
time = { version = "0.3", features = ["serde", "macros"] }

# Password hashing (for API keys)
bcrypt = "0.15"

# Secure random generation
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Constant-time comparison
subtle = "2.6"

# UUID for key IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# OS keychain integration
keyring = "3.6"

# HMAC for audit log signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
