[package]
name = "bazbom-bazel-reachability"
version = "6.5.0"
edition = "2021"
authors = ["BazBOM Contributors"]
description = "Bazel build graph reachability analysis for BazBOM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
