[package]
name = "bazbom-cache"
version = "6.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "3.23"
