[package]
name = "bazbom-containers"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1.1"
log = "0.4"
tempfile = "3.23"
reqwest = { version = "0.12", features = ["json", "blocking"] }
hyperlocal = "0.9"  # For Unix socket support
zip = "0.6"  # For reading JAR files (which are ZIP archives)

[dev-dependencies]
tempfile = "3.23"
