[package]
name = "bazbom-containers"
version = "6.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1.1"
tracing = "0.1"
log = "0.4"
tempfile = "3.23"
reqwest = { version = "0.12", features = ["json", "blocking"] }
hyperlocal = "0.9"  # For Unix socket support
zip = "6.0"  # For reading JAR files (which are ZIP archives)
tokio = { version = "1.48", features = ["process", "fs", "sync", "macros", "rt-multi-thread"] }
async-trait = "0.1"
futures = "0.3"
which = "8.0"  # For finding tool binaries
rayon = "1.10"  # For parallel scanning

# Native OS package vulnerability scanning
bazbom-alpine = { path = "../bazbom-alpine" }
bazbom-debian = { path = "../bazbom-debian" }
bazbom-redhat = { path = "../bazbom-redhat" }

[dev-dependencies]
tempfile = "3.23"
