[package]
name = "bazbom-core"
version = "6.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bazbom-formats = { path = "../bazbom-formats" }
bazbom-graph = { path = "../bazbom-graph" }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.7", features = ["html_reports"] }
sha2 = "0.10"
hex = "0.4"

[[bench]]
name = "scan_performance"
harness = false
