[package]
name = "bazbom-crypto"
version = "7.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"
description = "Cryptographic primitives for BazBOM - encryption, hashing, signatures"

[dependencies]
# AEAD encryption (ChaCha20-Poly1305)
chacha20poly1305 = "0.10"

# Secure random generation
rand = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding for encrypted data
base64 = "0.22"

# Zeroize for secure memory cleanup
zeroize = "1.8"

# SHA-256 hashing
sha2 = "0.10"
hex = "0.4"

# Constant-time comparison
subtle = "2.6"

[dev-dependencies]
tempfile = "3"
