[package]
name = "bazbom-dashboard"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"
description = "Web dashboard for BazBOM SBOM and vulnerability visualization"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Templates (optional, for server-side rendering)
tera = "1.20"

# Date/time for exports
chrono = "0.4"

# Path resolution
bazbom-core = { path = "../bazbom-core" }
bazbom-formats = { path = "../bazbom-formats" }
