[package]
name = "bazbom-dashboard"
version = "6.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"
description = "Web dashboard for BazBOM SBOM and vulnerability visualization"

[dependencies]
# Web framework
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Security & Authentication
subtle = "2.6"
keyring = "3.6"
bazbom-auth = { path = "../bazbom-auth" }

# Rate limiting
governor = "0.7"

# Templates (optional, for server-side rendering)
tera = "1.20"

# Date/time for exports
chrono = "0.4"

# HMAC for audit log signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Path resolution
bazbom-core = { path = "../bazbom-core" }
bazbom-formats = { path = "../bazbom-formats" }
