[package]
name = "bazbom-debian"
version = "6.6.0"
edition = "2021"
license = "MIT"
description = "Debian/Ubuntu security tracker client for OS-level vulnerability scanning"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
