[package]
name = "bazbom-depsdev"
version = "6.0.0"
edition = "2021"
authors = ["Chad Boyd <cboyd0319@gmail.com>"]
description = "deps.dev API client for BazBOM upgrade intelligence"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
