[package]
name = "bazbom-github"
version = "6.8.0"
edition = "2021"
license = "MIT"
description = "GitHub PR automation and integration for BazBOM v6.8"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
# Core
bazbom-core = { path = "../bazbom-core" }
anyhow = "1"
thiserror = "1"
tracing = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Rate limiting
governor = "0.10"
tower = "0.5"

# Security
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"

# Webhook server
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2"
base64 = "0.22"
async-trait = "0.1"
regex = "1"
serde_yaml = "0.9"

# GitHub API
octocrab = "0.41"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
