[package]
name = "bazbom-js-reachability"
version = "6.0.0"
edition = "2021"
license = "MIT"
description = "JavaScript/TypeScript reachability analysis for BazBOM"
repository = "https://github.com/cboyd0319/BazBOM"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Use tree-sitter for stable JS/TS parsing (no dependency conflicts)
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tracing = "0.1"
walkdir = "2"
petgraph = "0.8"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
