[package]
name = "bazbom-lsp"
version = "1.0.0"
edition = "2021"
authors = ["BazBOM Maintainers"]
description = "Language Server Protocol implementation for BazBOM vulnerability scanning"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"

[[bin]]
name = "bazbom-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
bazbom-advisories = { path = "../bazbom-advisories" }
bazbom-core = { path = "../bazbom-core" }

[dev-dependencies]
