[package]
name = "bazbom-ml"
version = "6.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cboyd0319/BazBOM"
description = "Machine learning infrastructure for BazBOM vulnerability prioritization and anomaly detection"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.48", features = ["rt", "macros"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.23"
